# corpus

./: .gitignore  CLAUDE.md  DOGFOOD.md  LICENSE  PRODUCT.md  README.md  SPEC.md  corpus-product-doc.html  corpus-technical-doc.html  pyproject.toml
.claude/agents/: architect.md  builder.md  debugger.md  designer.md  qa.md  reviewer.md
.claude/memory/: DECISIONS.md  DESIGN-phase-1c-doc-format.md  DESIGN-phase4-graph-viewer.md  DESIGN-phase6-obsidian-rework.md  DESIGN-phase7-sahara.md  PLAN.md  STATE.md  phase9_design_spec.md
corpus/: __init__.py  cli.py  config.py  diff.py  docs.py  graph.py  ignore.py  llm.py  mcp.py  parser.py  scaffold.py  server.py  state.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: CommandPalette.jsx  DocPanel.jsx  DocReader.jsx  FileTree.jsx  GraphCanvas.jsx  ImportanceFilter.jsx  Minimap.jsx
frontend/src/components/tabs/: ArchitectureTab.jsx  DependenciesTab.jsx  ExplorerTab.jsx  OverviewTab.jsx  SymbolsTab.jsx
frontend/src/hooks/: useDoc.js  useGraph.js  useMeta.js
frontend/src/lib/: graphCuration.js  hierarchyLayout.js
frontend/src/styles/: global.css  tokens.css
frontend/src/test/: phase6.test.js  phase7.test.js  phase8.test.js  phase9.test.jsx
frontend/src/utils/: path.js
tests/: test_phase1a.py  test_phase1b.py  test_phase1c.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
